# Grade-Check

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  grade_checker.py  pyproject.toml
