[tool.poetry]
name = "grade-checker"
version = "0.1.0"
description = "학교 홈페이지 성적 확인 자동화 프로그램"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"
python-dotenv = "^1.0.0"
schedule = "^1.2.1"
webdriver-manager = "^4.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
